Revision history for HTML::FormWidgets

         - Updated Moose / Class::MOP / MRO::Compat dependencies
         - Removed CSS border art for rounded corners from Menu

0.9.336  2011-12-30
         - Added Async widget. Adds a div whose content is loaded via Ajax

0.8.334  2011-12-12
         - Fixed input field names in Table
         - Updated pod and added more tests
         - Added globals attr to separate class wide defaults from obj defaults
         - Set separator to break to have prompt appear above input field
         - Popupmenu sorts values into label order if labels are provided
         - Fields attr contains localized text strings
         - Updated inc::Bob
         - Textarea simplified
         - If render_field return null then so does render
         - Tweaked row and col ids in Table
         - Added Unordered list subclass

0.7.312  2011-06-26
         - Stepno can be a hash ref which will get inflated

0.6.311  2011-05-22
         - Made the build class method ignore bad input data structure
         - Suppressed dcollins CPAN testing
         - Switched to using Try::Tiny
         - Added step number iterator
         - Changed default class names for Anchor and Button
         - Moved boilerplate M::B subclass code to inc/Bob.pm
         - Suppressed Konig CPAN testing again
         - Added ScrollPin
         - Added SidebarPanel
         - Added TabSwapper
         - Added clear field to date
         - Tables are now client side sortable
         - Optional JS files are now selectable by the widget
         - Tree widget now self renders via HTML parser
         - Refactored html class names
         - Added ifield class to all input fields not buttons
         - Added row numbering to Table subclass
         - Fixed missing filler top line menu subclass
         - Switched to using TryCatch
         - Fixed readonly attribte in Date and slider subclasses
         - Moved English hint text out of subclasses