@@ -6,7 +6,6 @@ use inc::Bob; # Module::Build subclass
 use version; our $VERSION = qv( sprintf '0.9.%d', q$Rev$ =~ /\d+/gmx );
 
 Bob->new( {
-   stop_tests => 1,
    module     => q(HTML::FormWidgets),
    home_page  => q(http://www.roxsoft.co.uk),
    requires   => {
