@@ -1,5 +1,7 @@
 Revision history for HTML::FormWidgets
 
+         - Added Flag type
+         - Renamed UnorderedList to List and added odered option
          - Updated Moose / Class::MOP / MRO::Compat dependencies
          - Removed CSS border art for rounded corners from Menu
 
